--- a/ma-page/package.json
+++ b/ma-page/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "bootstrap": "^4.0.0",
     "react": "^17.0.2",
@@ -44,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
+    "react-router-dom": "^5.2.0"
   }
 }
