--- a/ma-page/package.json
+++ b/ma-page/package.json
@@ -12,8 +12,11 @@
     "@types/node": "^12.20.7",
     "@types/react-dom": "^17.0.3",
     "bootstrap": "^4.0.0",
+    "chokidar": "^3.5.1",
+    "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.7.1",
     "react-popper": "^0.9.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^5.0.0",
