--- a/ma-page/package.json
+++ b/ma-page/package.json
@@ -11,10 +11,11 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
     "@types/react-dom": "^17.0.3",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.6.0",
     "chokidar": "^3.5.1",
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
     "react-popper": "^0.9.2",
